# utilities, reset, wrapups and cleanups * fix missing variables * add reboot * custom properties amendments (ongoing)

--- a/core/app/assets/styles/_utilities.scss
+++ b/core/app/assets/styles/_utilities.scss
@@ -1,4 +1,19 @@
-// Example of Utility Class
-.u-flex {
-	display: flex !important;
-}
+// Utilities: Loader
+// - Loads all utilities scoped partials
+@import "utilities/align";
+@import "utilities/background";
+@import "utilities/borders";
+@import "utilities/clearfix";
+@import "utilities/display";
+@import "utilities/embed";
+@import "utilities/flex";
+@import "utilities/float";
+@import "utilities/interactions";
+@import "utilities/overflow";
+@import "utilities/position";
+@import "utilities/screenreaders";
+@import "utilities/shadows";
+@import "utilities/sizing";
+@import "utilities/spacing";
+@import "utilities/text";
+@import "utilities/visibility";
