--- a/core/app/assets/styles/tokens/_spacing.scss
+++ b/core/app/assets/styles/tokens/_spacing.scss
@@ -1,1 +1,1 @@
-$eps-spacer: 0.625rem;
+$eps-spacer: 0.5rem;
