--- a/core/app/assets/styles/tokens/_type.scss
+++ b/core/app/assets/styles/tokens/_type.scss
@@ -1,26 +1,26 @@
 // TYPE
-$eps-font-base: 1rem;
+$eps-font-size-base: 1rem;
 
 // Font sizes registration
-$font-size-10: (0.625 * $eps-font-base); //~10px
-$font-size-12: (0.75 * $eps-font-base); //~12px
-$font-size-13: (0.8125 * $eps-font-base); //~13px
-$font-size-14: (0.875 * $eps-font-base); //~14px
-$font-size-17: (1.0625 * $eps-font-base); //~17px
-$font-size-18: (1.125 * $eps-font-base); //~18px
-$font-size-20: (1.25 * $eps-font-base); //~20px
-$font-size-22: (1.375 * $eps-font-base); //~22px
-$font-size-24: (1.5 * $eps-font-base); //~24px
-$font-size-26: (1.625 * $eps-font-base); //~26
-$font-size-28: (1.75 * $eps-font-base); //~28px
-$font-size-32: (2 * $eps-font-base); //~32px
-$font-size-36: (2.25 * $eps-font-base); //~36px
-$font-size-40: (2.5 * $eps-font-base); //~40px
-$font-size-48: (3 * $eps-font-base); //~48px
-$font-size-56: (3.5 * $eps-font-base); //~56px
-$font-size-60: (3.75 * $eps-font-base); //~60px
-$font-size-64: (4 * $eps-font-base); //~64px
-$font-size-70: (4.375 * $eps-font-base); //~70px
+$font-size-10: (0.625 * $eps-font-size-base); //~10px
+$font-size-12: (0.75 * $eps-font-size-base); //~12px
+$font-size-13: (0.8125 * $eps-font-size-base); //~13px
+$font-size-14: (0.875 * $eps-font-size-base); //~14px
+$font-size-17: (1.0625 * $eps-font-size-base); //~17px
+$font-size-18: (1.125 * $eps-font-size-base); //~18px
+$font-size-20: (1.25 * $eps-font-size-base); //~20px
+$font-size-22: (1.375 * $eps-font-size-base); //~22px
+$font-size-24: (1.5 * $eps-font-size-base); //~24px
+$font-size-26: (1.625 * $eps-font-size-base); //~26
+$font-size-28: (1.75 * $eps-font-size-base); //~28px
+$font-size-32: (2 * $eps-font-size-base); //~32px
+$font-size-36: (2.25 * $eps-font-size-base); //~36px
+$font-size-40: (2.5 * $eps-font-size-base); //~40px
+$font-size-48: (3 * $eps-font-size-base); //~48px
+$font-size-56: (3.5 * $eps-font-size-base); //~56px
+$font-size-60: (3.75 * $eps-font-size-base); //~60px
+$font-size-64: (4 * $eps-font-size-base); //~64px
+$font-size-70: (4.375 * $eps-font-size-base); //~70px
 
 // Line heights
 // Registration (temps)
@@ -49,3 +49,9 @@ $eps-font-size-text-sm: $font-size-14; //14px
 $eps-font-size-text-xs: $font-size-13; //13px
 $eps-font-size-caption: $font-size-12; //12px
 $eps-font-size-micro: $font-size-10; //10px
+
+
+//
+$eps-small-font-size: 80%;
+$eps-paragraph-margin-bottom: null;
+$eps-headings-margin-bottom: null;
