--- a/core/app/assets/styles/tokens/maps/_theme-map.scss
+++ b/core/app/assets/styles/tokens/maps/_theme-map.scss
@@ -1,4 +1,9 @@
 $eps-theme-colors: (
+		body-color: $eps-body-color,
+		body-bg:$eps-body-bg,
+		link-color: $eps-link-color,
+		link-hover-color: $eps-link-hover-color,
+		text-muted:$eps-theme-text-muted,
 		light: $eps-theme-light,
 		dark: $eps-theme-dark,
 		info: $eps-theme-info,
