--- a/core/app/assets/styles/utilities/_borders.scss
+++ b/core/app/assets/styles/utilities/_borders.scss
@@ -16,13 +16,13 @@
 .u-border-bottom-0 { border-bottom: 0 !important; }
 .u-border-left-0   { border-left: 0 !important; }
 
-@each $color, $value in $theme-colors {
+@each $color, $value in $eps-theme-colors {
   .u-border-#{$color} {
     border-color: $value !important;
   }
 }
 
-@each $color, $value in $tints {
+@each $color, $value in $eps-tints {
 	.u-border-gray-#{$color} {
 		border-color: $value !important;
 	}
