--- a/core/app/assets/styles/utilities/_spacing.scss
+++ b/core/app/assets/styles/utilities/_spacing.scss
@@ -2,7 +2,7 @@
 
 // Margin and Padding
 @each $prop, $abbrev in (margin: m, padding: p) {
-	@each $size, $length in $spacers {
+	@each $size, $length in $eps-spacers {
 		.u-#{$abbrev}-#{$size} {
 			#{$prop}: $length !important;
 		}
@@ -26,7 +26,7 @@
 }
 
 // Negative margins (e.g., where `.mb-n1` is negative version of `.mb-1`)
-@each $size, $length in $spacers {
+@each $size, $length in $eps-spacers {
 	@if $size != 0 {
 		.u-m-n#{$size} {
 			margin: -$length !important;
